first page done

--- a/index.html
+++ b/index.html
@@ -8,27 +8,176 @@
   </head>
   <body>
     <header>
+      <div class="hamburger">
+        <img src="images/hamburger.png" style="height: 38px;">
+      </div>
+      <h2>HOME</h2>
       <div class="headerimg">
-        <img src="images/logo.svg" style="height: 38px; width: 97px" />
+        <img src="images/logo.svg" style="height: 38px; width: 97px"/>
       </div>
       <div class="navlist">
         <nav>
-          <a href="nowplaying.html">NOW PLAYING</a> |
-          <a href="comingsoon.html"> COMING SOON</a> |
+          <a href="nowplaying.html">NOW PLAYING</a> 
+          <a href="comingsoon.html"> COMING SOON</a>
           <a href="about.html"> ABOUT</a>
         </nav>
       </div>
     </header>
-    <div class="container">
+    <main>
+    <div class="imgcontainer">
+
       <img
         src="images/ClockworkMirage.webp"
         alt="ClockworkMirage"
-        style="height: 333; width: 100%; border-radius: 7px"
+        style=" border-radius: 7px"
       />
+
       <div class="imgtitle">
+
         <h2>The clockwork Mirage</h2>
+
       </div>
+
       <div class="imgcategory"><h5>Science fiction / thriller</h5></div>
+
+      <a href="clockworkticket.html">Tickets</a href>
+
+      <div class="sidepanel">
+
+      <h2>POPULAR MOVIES</h2>
+
+      <div class="sidepanelcontent">
+      <img
+      src="images/Galactic Guardians.webp"
+      alt="Guardians Galactic"> 
+      <div class="textcontainer">
+      <p>Galactic Guardians: Rise of the Nova Empress</p>
+      <div class="categorycontainer">
+        Superhero/action
+      </div></div>
     </div>
+
+      <div class="sidepanelcontent">
+      <img
+      src="images/ClockworkMirage.webp"
+      alt="ClockworkMirage"><div class="textcontainer"><p>The Clockwork Mirage</p>
+      <div class="categorycontainer">
+        Science fiction / thriller
+      </div></div>
+    </div>
+
+      <div class="sidepanelcontent">
+      <img
+      src="images/HollowCreek.webp"
+      alt="HollowCreek"><div class="textcontainer"><p>The Haunting of Hollow Creek</p>
+      <div class="categorycontainer">
+        Horror / Mystery
+      </div>
+    </div></div>
+    
+      <h2>COMING SOON</h2>
+
+      <div class="sidepanelcontent">
+      <img src="images/Reflection.webp"
+      alt="Lost in reflection"><div class="textcontainer">
+      <p>Lost in reflection</p>
+      <div class="categorycontainer">Thriller / Supernatural Drama</div>
+    </div>
+  </div>
+
+      <div class="sidepanelcontent">
+      <img src="images/FinalRehearsal.webp"
+      alt="FinalRehearsal"><div class="textcontainer">
+      <p>The final rehearsal</p>
+      <div class="categorycontainer">Drama / Mystery</div>
+    </div>
+  </div>
+
+      <div class="sidepanelcontent">
+      <img src="images/ZombieZumba.webp"
+      alt="ZombieZumba"><div class="textcontainer">
+      <p>Zombie Zumba</p>
+      <div class="categorycontainer">Comedy / Horror</div>
+    </div>
+  </div>
+
+    </div>
+
+    </div>
+
+    <div class="nowplayingcontainer">
+      <h2>NOW PLAYING</h2> <span></span> <div class="movetoend"><h2> < &nbsp;&nbsp;&nbsp;&nbsp; > </h2></div>
+
+      <div class="nowplayingimgcontainer">
+        <div class="nowplayingimgtitle">Whispers In The Wind</div>
+      <img src="images/WhispersInTheWind.webp"/>
+        <div class="nowplayingcategory"><p>Romantic Drama</p></div>
+      </div>
+
+      <div class="nowplayingimgcontainer">
+        <div class="nowplayingimgtitle">Galactic Guardians</div>
+        <img src="images/Galactic Guardians.webp"/>
+        <div class="nowplayingcategory"><p>Superhero / Action</p>
+      </div>
+    </div>
+      
+      <div class="nowplayingimgcontainer">
+        <div class="nowplayingimgtitle">The haunting of Hollow Creek</div>
+        <img src="images/HollowCreek.webp"/>
+        <div class="nowplayingcategory"><p>Horror / Mystery</p>
+      </div>
+      </div>
+      <div class="nowplayingimgcontainer">
+        <div class="nowplayingimgtitle">Retrograde</div>
+        <img src="images/Retrograde.webp"/>
+        <div class="nowplayingcategory"><p>Action / Science Fiction</p>
+      </div>
+      </div>
+      <div class="nowplayingimgcontainer">
+        <div class="nowplayingimgtitle">Agent double dad</div>
+        <img src="images/DoubleDad.webp"/>
+        <div class="nowplayingcategory"><p>Family Comedy</p>
+      </div>
+      </div>
+      <div class="nowplayingimgcontainer">
+        <div class="nowplayingimgtitle">Love, Lies, and 
+          Lemon Cake</div>
+        <img src="images/LemonCake.webp"/>
+        <div class="nowplayingcategory"><p>Romantic Comedy</p>
+      </div>
+</div>
+      </div>
+    </div>
+  </main>
+  <div class="mobilecontainer">
+    <div class="nowplayingmobile">
+      <h3>NOW PLAYING</h3>
+      <div class="nowplayingimgcontainermobile">
+        <img src="/images/Galactic Guardians.webp">
+        <div class="mobiletextholder">
+        <p>Galactic Guardians: Rise of the Nova Empress</p>
+        <p>Superhero / Action</p>
+        <div class="stars">★★★★</div>
+        <a href="tickets.html" style="padding-right: 1rem;width: 32px;padding-left: 16px;">TICKETS</a href>
+      </div></div>
+      <div class="nowplayingimgcontainermobile">
+        <img src="/images/HollowCreek.webp">
+        <div class="mobiletextholder">
+        <p>The Haunting of Hollow creek</p>
+        <p>Superhero / Action</p>
+        <div class="stars">★★★</div>
+        <a href="tickets.html" style="padding-right: 1rem;width: 30px;padding-left: 16px;">TICKETS</a href>
+    </div>
+      </div>
+    </div>
+  </div>
+  <div class="mobilefooter">
+    <div class="mobilelinkholder">
+    <a href="tickets.html">POPULAR MOVIES</a>
+  </div>
+  <div class="mobilelinkholder">
+    <a href="comingsoon.html">COMING SOON</a>
+  </div>
+</div>
   </body>
 </html>
