Started on 3rd page, need to keep fixing stuff

--- a/clockworkticket.html
+++ b/clockworkticket.html
@@ -11,13 +11,13 @@
         <div class="hamburger">
           <img src="images/hamburger.png" style="height: 38px;">
         </div>
-        <h2>HOME</h2>
+        <h2>Tickets</h2>
         <div class="headerimg">
           <img src="images/logo.svg" style="height: 38px; width: 97px"/>
         </div>
         <div class="navlist">
           <nav>
-            <a href="nowplaying.html">NOW PLAYING</a> 
+            <a href="index.html">NOW PLAYING</a> 
             <a href="comingsoon.html"> COMING SOON</a>
             <a href="about.html"> ABOUT</a>
           </nav>
@@ -340,7 +340,7 @@
             <img src="images/Reserved.png" alt="Seats that look like this are Reserved">
             <img src="images/Available.png" alt="Seats that look like this are available">
         </div>
-        <a href="BOOK NOW!">BOOK NOW!</a>
+        <a href="booknow.html">BOOK NOW!</a>
     </div></div>
       </main>
 </body>
