--- a/booknow.html
+++ b/booknow.html
@@ -38,7 +38,8 @@
             SEATS:
         </div>
         <div class="seats">
-            19 20
+            <ul id="unordered-list"></ul>
+            <script src="seatcheck.js"></script>
         </div>
         <a href="booknow">BOOK NOW</a>
     </div>
