--- a/clockworkticket.html
+++ b/clockworkticket.html
@@ -79,6 +79,16 @@
                     <input type="checkbox" id="1F" />
                     <label for="1F">1F</label>
                   </li>
+                  <li class="seat">
+                    <input type="checkbox" id="1G" />
+                    <label for="1G">1G</label>
+                  </li><li class="seat">
+                    <input type="checkbox" id="1H" />
+                    <label for="1H">1H</label>
+                  </li><li class="seat">
+                    <input type="checkbox" id="1I" />
+                    <label for="1I">1I</label>
+                  </li>
                 </ol>
               </li>
               <li class="row row--2">
@@ -106,6 +116,16 @@
                   <li class="seat">
                     <input type="checkbox" id="2F" />
                     <label for="2F">2F</label>
+                  </li>
+                  <li class="seat">
+                    <input type="checkbox" id="2G" />
+                    <label for="2G">2G</label>
+                  </li><li class="seat">
+                    <input type="checkbox" id="2H" />
+                    <label for="2H">2H</label>
+                  </li><li class="seat">
+                    <input type="checkbox" id="2I" />
+                    <label for="2I">2I</label>
                   </li>
                 </ol>
               </li>
@@ -135,6 +155,16 @@
                     <input type="checkbox" id="3F" />
                     <label for="3F">3F</label>
                   </li>
+                  <li class="seat">
+                    <input type="checkbox" id="3G" />
+                    <label for="3G">3G</label>
+                  </li><li class="seat">
+                    <input type="checkbox" id="3H" />
+                    <label for="3H">3H</label>
+                  </li><li class="seat">
+                    <input type="checkbox" id="3I" />
+                    <label for="3I">3I</label>
+                  </li>
                 </ol>
               </li>
               <li class="row row--4">
@@ -162,6 +192,16 @@
                   <li class="seat">
                     <input type="checkbox" id="4F" />
                     <label for="4F">4F</label>
+                  </li>
+                  <li class="seat">
+                    <input type="checkbox" id="4G" />
+                    <label for="4G">4G</label>
+                  </li><li class="seat">
+                    <input type="checkbox" id="4H" />
+                    <label for="4H">4H</label>
+                  </li><li class="seat">
+                    <input type="checkbox" id="4I" />
+                    <label for="4I">4I</label>
                   </li>
                 </ol>
               </li>
@@ -191,6 +231,16 @@
                     <input type="checkbox" id="5F" />
                     <label for="5F">5F</label>
                   </li>
+                  <li class="seat">
+                    <input type="checkbox" id="5G" />
+                    <label for="5G">5G</label>
+                  </li><li class="seat">
+                    <input type="checkbox" id="5H" />
+                    <label for="5H">5H</label>
+                  </li><li class="seat">
+                    <input type="checkbox" id="5I" />
+                    <label for="5I">5I</label>
+                  </li>
                 </ol>
               </li>
               <li class="row row--6">
@@ -218,6 +268,16 @@
                   <li class="seat">
                     <input type="checkbox" id="6F" />
                     <label for="6F">6F</label>
+                  </li>
+                  <li class="seat">
+                    <input type="checkbox" id="6G" />
+                    <label for="6G">6G</label>
+                  </li><li class="seat">
+                    <input type="checkbox" id="6H" />
+                    <label for="6H">6H</label>
+                  </li><li class="seat">
+                    <input type="checkbox" id="6I" />
+                    <label for="6I">6I</label>
                   </li>
                 </ol>
               </li>
@@ -247,6 +307,16 @@
                     <input type="checkbox" id="7F" />
                     <label for="7F">7F</label>
                   </li>
+                  <li class="seat">
+                    <input type="checkbox" id="7G" />
+                    <label or="7G">7G</label>
+                  </li><li class="seat">
+                    <input type="checkbox" id="7H" />
+                    <label for="7H">7H</label>
+                  </li><li class="seat">
+                    <input type="checkbox" id="7I" />
+                    <label for="7I">7I</label>
+                  </li>
                 </ol>
               </li>
               <li class="row row--8">
@@ -274,6 +344,16 @@
                   <li class="seat">
                     <input type="checkbox" id="8F" />
                     <label for="8F">8F</label>
+                  </li>
+                  <li class="seat">
+                    <input type="checkbox" id="8G" />
+                    <label for="8G">8G</label>
+                  </li><li class="seat">
+                    <input type="checkbox" id="8H" />
+                    <label for="8H">8H</label>
+                  </li><li class="seat">
+                    <input type="checkbox" id="8I" />
+                    <label for="8I">8I</label>
                   </li>
                 </ol>
               </li>
@@ -303,6 +383,16 @@
                     <input type="checkbox" id="9F" />
                     <label for="9F">9F</label>
                   </li>
+                  <li class="seat">
+                    <input type="checkbox" id="9G" />
+                    <label for="9G">9G</label>
+                  </li><li class="seat">
+                    <input type="checkbox" id="9H" />
+                    <label for="9H">9H</label>
+                  </li><li class="seat">
+                    <input type="checkbox" id="9I" />
+                    <label for="9I">9I</label>
+                  </li>
                 </ol>
               </li>
               <li class="row row--10">
@@ -331,16 +421,29 @@
                     <input type="checkbox" id="10F" />
                     <label for="10F">10F</label>
                   </li>
+                  <li class="seat">
+                    <input type="checkbox" id="10G" />
+                    <label for="10G">10G</label>
+                  </li>
+                  <li class="seat">
+                    <input type="checkbox" id="10H" />
+                    <label for="10H">10H</label>
+                  </li>
+                  <li class="seat">
+                    <input type="checkbox" id="10I" />
+                    <label for="10I">10I</label>
+                  </li>
                 </ol>
               </li>
             </ol>
           </div>
+          <script src="seatcheck.js"></script>
         <div class="seatstatuscontainer">
             <img src="images/Selected.png"alt="Seats that look like this are Selected">
             <img src="images/Reserved.png" alt="Seats that look like this are Reserved">
             <img src="images/Available.png" alt="Seats that look like this are available">
         </div>
-        <a href="booknow.html">BOOK NOW!</a>
+        <a onclick="clickedSeats()" href="booknow.html">BOOK NOW!</a>
     </div></div>
       </main>
 </body>
