not sure if i should turn it in right now

--- a/booknow.html
+++ b/booknow.html
@@ -41,7 +41,8 @@
             <ul id="unordered-list"></ul>
             <script src="seatcheck.js"></script>
         </div>
-        <a href="booknow">BOOK NOW</a>
+        <a href="booknow" onclick="booked()">BOOK NOW</a>
+        <script src="seatcheck.js"></script>
     </div>
       </main>
 </body>
