--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     </div>
 
     <div class="nowplayingcontainer">
-      <h2>NOW PLAYING</h2> <span></span> <div class="movetoend"><h2> < &nbsp;&nbsp;&nbsp;&nbsp; > </h2></div>
+      <h2>NOW PLAYING</h2> <span></span> <div class="movetoend"> <h2> < &nbsp;&nbsp;&nbsp;&nbsp; > </h2></div>
 
       <div class="nowplayingimgcontainer">
         <div class="nowplayingimgtitle">Whispers In The Wind</div>
@@ -157,7 +157,7 @@
         <p>Galactic Guardians: Rise of the Nova Empress</p>
         <p>Superhero / Action</p>
         <div class="stars">★★★★</div>
-        <a href="tickets.html" style="padding-right: 1rem;width: 32px;padding-left: 16px;">TICKETS</a href>
+        <a href="tickets.html" style="padding-right: 1rem;padding-left: 16px;">TICKETS</a href>
       </div></div>
       <div class="nowplayingimgcontainermobile">
         <img src="/images/HollowCreek.webp">
@@ -165,7 +165,7 @@
         <p>The Haunting of Hollow creek</p>
         <p>Superhero / Action</p>
         <div class="stars">★★★</div>
-        <a href="tickets.html" style="padding-right: 1rem;width: 30px;padding-left: 16px;">TICKETS</a href>
+        <a href="tickets.html" style="padding-right: 1rem;padding-left: 16px;">TICKETS</a href>
     </div>
       </div>
     </div>
